src/test/c/accept/18-for-loop.arcx
for(4+5){
    1234;
}