src/test/c/reject/12-invalid-for-loop.arcx
for(frodo FellowshipOfTheRing){
    1234;
} 